# tibber_price_grabber

./: Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: rust.yml
src/: cloudevent_output.rs  get_home_id_query.graphql  main.rs  prioritized_output.rs  query.graphql  schema.graphql  terminal_output.rs  tibber.rs
