[package]
name = "tibber_price_grabber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
graphql_client = { version = "^0.15.0", features = ["reqwest-blocking"] }
serde = "^1.0.228"
reqwest = { version = "^0.12", features = ["json", "blocking"]}
chrono = "^0.4.42"
chrono-tz = "^0.10.4"
cloudevents-sdk = { git = "https://github.com/tebrevik/sdk-rust", features = ["nats"] }
uuid = { version = "^1.19.0", features = ["v4"] }
serde_json = "^1.0.148"
serde_bytes = "0.11.19"
clap = { version = "^4.5.54", features = ["derive"] }
async-nats = "^0.45.0"
tokio = { version = "1.48.0", features = ["full"] }

